<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view">

    <TextView
        android:id="@+id/view_Login"
        android:layout_width="@dimen/margin160"
        android:layout_height="@dimen/margin75"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:text="@string/txt_login"
        android:textSize="@dimen/txtsize40"
        android:textStyle="bold"
        android:focusable="true"
        android:contentDescription="@string/viewLogin"
        app:layout_constraintBottom_toTopOf="@+id/txt_cnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/txt_cnpj"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginTop="@dimen/margin212"
        android:paddingStart="@dimen/margin10"
        android:hint="@string/cnpj_cpf"
        android:inputType="number"
        android:contentDescription="@string/txt_cpf_cnpj"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlSymmetry" />

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:paddingStart="@dimen/margin10"
        android:hint="@string/senha"
        android:focusable="true"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:contentDescription="@string/campo_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cnpj"
        app:layout_constraintVertical_bias="0.233"
        tools:ignore="ContentDescription,RtlSymmetry" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/margin300"
        android:layout_height="@dimen/margin50"
        android:background="@drawable/background_btnorange"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/btn_login"
        android:hint="@string/login"
        android:textColorHint="#FFFFFF"
        android:textSize="@dimen/txt_size20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_senha"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/txt_esqteceu_minha_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:focusable="true"
        android:contentDescription="@string/campo_esqueci_senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.494"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>